update - DRO webinar
Updated to include chages, updates from DRO webinar, and to concolidate all the scipts I have going.

Needs to ne cleaned up.

--- a/ArcGIS Online user and content management ideas.ipynb
+++ b/ArcGIS Online user and content management ideas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
    "source": [
     "password = getpass()\n",
     "gis = GIS(\"https://esridenver.maps.arcgis.com\", \"pgamberg@EsriDenver\", password, verify_cert=True)"
@@ -44,11 +52,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Role ID: iAAAAAAAAAAAAAAA\n",
+      "Role name: Viewer\n",
+      "Role description: Viewer\n",
+      "Role privileges: ['portal:user:joinGroup', 'portal:user:viewOrgGroups', 'portal:user:viewOrgItems', 'portal:user:viewOrgUsers', 'premium:user:demographics', 'premium:user:elevation', 'premium:user:featurereport', 'premium:user:geocode', 'premium:user:networkanalysis']\n",
+      "\n",
+      "Role ID: iBBBBBBBBBBBBBBB\n",
+      "Role name: Data Editor\n",
+      "Role description: Data Editor\n",
+      "Role privileges: ['features:user:edit', 'portal:user:joinGroup', 'portal:user:viewOrgGroups', 'portal:user:viewOrgItems', 'portal:user:viewOrgUsers', 'premium:user:demographics', 'premium:user:elevation', 'premium:user:featurereport', 'premium:user:geocode', 'premium:user:networkanalysis']\n",
+      "\n",
+      "Role ID: XVOwQfnzA3huged4\n",
+      "Role name: Publisher no Public Share\n",
+      "Role description: Publisher no Public Share\n",
+      "Role privileges: ['features:user:edit', 'portal:publisher:publishFeatures', 'portal:publisher:publishScenes', 'portal:publisher:publishTiles', 'portal:user:createGroup', 'portal:user:createItem', 'portal:user:joinGroup', 'portal:user:joinNonOrgGroup', 'portal:user:shareGroupToOrg', 'portal:user:shareGroupToPublic', 'portal:user:shareToGroup', 'portal:user:shareToOrg', 'portal:user:viewOrgGroups', 'portal:user:viewOrgItems', 'portal:user:viewOrgUsers', 'premium:user:demographics', 'premium:user:elevation', 'premium:user:geocode', 'premium:user:geoenrichment', 'premium:user:networkanalysis', 'premium:user:spatialanalysis']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "role_mgr = arcgis.gis.RoleManager(gis)\n",
     "roles = role_mgr.all()\n",
@@ -69,9 +99,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>org_admin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>83</td>\n",
+       "      <td>org_publisher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>org_user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>iAAAAAAAAAAAAAAA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>iBBBBBBBBBBBBBBB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   count               key\n",
+       "0     15         org_admin\n",
+       "1     83     org_publisher\n",
+       "2      3          org_user\n",
+       "3      2  iAAAAAAAAAAAAAAA\n",
+       "4      1  iBBBBBBBBBBBBBBB"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "user_mgr = arcgis.gis.UserManager(gis)\n",
     "assigned_roles = user_mgr.counts(type='role')\n",
