--- a/Administrative_Workflows.ipynb
+++ b/Administrative_Workflows.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,19 +48,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
    "source": [
     "password = getpass()\n",
-    "gis = GIS(\"https://esridenver.maps.arcgis.com\", \"pgamberg@EsriDenver\", password, verify_cert=False)"
+    "gis = GIS(\"https://statesales.maps.arcgis.com\", \"pgamberg_statesales\", password, verify_cert=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "GIS @ <a href=\"https://statesales.maps.arcgis.com\">https://statesales.maps.arcgis.com</a>"
+      ],
+      "text/plain": [
+       "GIS @ https://statesales.maps.arcgis.com version:7.2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gis"
    ]
@@ -81,18 +103,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<User username:alis4396@esri.com_statesales>,\n",
+       " <User username:ambe9440@esri.com_statesales>,\n",
+       " <User username:anth5900@esri.com_statesales>,\n",
+       " <User username:bbowles_statesales>,\n",
+       " <User username:bjones_statesales>,\n",
+       " <User username:bruc6988@esri.com_statesales>,\n",
+       " <User username:bschmitz_statesales>,\n",
+       " <User username:canderson_statesales>,\n",
+       " <User username:cdorn_statesales>,\n",
+       " <User username:cfisher_statesales>,\n",
+       " <User username:chri1175@esri.com_statesales>,\n",
+       " <User username:chri1610@esri.com_statesales>,\n",
+       " <User username:chri4096@esri.com_statesales>,\n",
+       " <User username:cnickola_statesales>,\n",
+       " <User username:dan1988@esri.com_statesales>,\n",
+       " <User username:davi9630@esri.com_statesales>,\n",
+       " <User username:dhaag_esri_state>,\n",
+       " <User username:eric3918@esri.com_statesales>,\n",
+       " <User username:esristateadmin>,\n",
+       " <User username:EsriStateSales>,\n",
+       " <User username:jbowles_statesales>,\n",
+       " <User username:jeckmann@esri.com_statesales>,\n",
+       " <User username:jeckmann_statesales>,\n",
+       " <User username:jeff2970@esri.com_statesales>,\n",
+       " <User username:jess4828@esri.com_statesales>,\n",
+       " <User username:jg1636@esri.com_statesales>,\n",
+       " <User username:jhagen_statesales>,\n",
+       " <User username:jlindemann_statesales>,\n",
+       " <User username:jmiller_statesales>,\n",
+       " <User username:john7333@esri.com_statesales>,\n",
+       " <User username:jona6743@esri.com_statesales>,\n",
+       " <User username:jose1826@esri.com_statesales>,\n",
+       " <User username:jpdoherty_statesales>,\n",
+       " <User username:jpedderState>,\n",
+       " <User username:jpedder_statesales>,\n",
+       " <User username:jruffing_statesales>,\n",
+       " <User username:JSill_statesales>,\n",
+       " <User username:kclancy_statesales>,\n",
+       " <User username:kevi5632@esri.com_statesales>,\n",
+       " <User username:KKantharaj_statesales>,\n",
+       " <User username:krit7745@esri.com_statesales>,\n",
+       " <User username:lconnelly_statesales>,\n",
+       " <User username:lee8057@esri.com_statesales>,\n",
+       " <User username:mark9431@esri.com_statesales>,\n",
+       " <User username:matt3220@esri.com_statesales>,\n",
+       " <User username:matt7399@esri.com_statesales>,\n",
+       " <User username:Matt8683@esri.com_statesales>,\n",
+       " <User username:matt8819@esri.com_statesales>,\n",
+       " <User username:matt9602@esri.com_statesales>,\n",
+       " <User username:mbullock_statesales>,\n",
+       " <User username:mdenuelle_statesales>,\n",
+       " <User username:mich9138@esri.com_statesales>,\n",
+       " <User username:mike1437@esri.com_statesales>,\n",
+       " <User username:mike9930@esri.com_statesales>,\n",
+       " <User username:mkoutnik_statesales>,\n",
+       " <User username:mlundeen_statesales>,\n",
+       " <User username:MRobinson_statesales>,\n",
+       " <User username:mscott_statesales>,\n",
+       " <User username:mviverito_statesales>,\n",
+       " <User username:naku5038@esri.com_statesales>,\n",
+       " <User username:nath497@esri.com_statesales>,\n",
+       " <User username:nbhatia_statesales>,\n",
+       " <User username:ndelcervo_statesales>,\n",
+       " <User username:nic10426@esri.com_statesales>,\n",
+       " <User username:nlyons@esri.com_statesales>,\n",
+       " <User username:nsauter_statesales>,\n",
+       " <User username:nsmith_statesales>,\n",
+       " <User username:pat2444@esri.com_statesales>,\n",
+       " <User username:paul2854@esri.com_statesales>,\n",
+       " <User username:pete9378@esri.com_statesales>,\n",
+       " <User username:pgamberg_statesales>,\n",
+       " <User username:rlow_statesales>,\n",
+       " <User username:Robe4742@esri.com_statesales>,\n",
+       " <User username:rod3512@esri.com_statesales>,\n",
+       " <User username:rrike_statesales>,\n",
+       " <User username:sara5687@esri.com_statesales>,\n",
+       " <User username:sbarnes_statesales>,\n",
+       " <User username:scot5141@esri.com_statesales>,\n",
+       " <User username:scot6032@esri.com_statesales>,\n",
+       " <User username:sean8468@esri.com_statesales>,\n",
+       " <User username:seth1822@esri.com_statesales>,\n",
+       " <User username:shay9409@esri.com_statesales>,\n",
+       " <User username:smoore_statesales>,\n",
+       " <User username:sperkins_statesales>,\n",
+       " <User username:StateSalesInsightsUser>,\n",
+       " <User username:svanaken_statesales>,\n",
+       " <User username:terr4158@esri.com_statesales>,\n",
+       " <User username:thensley_statesales>,\n",
+       " <User username:timo8279@esri.com_statesales>,\n",
+       " <User username:todd9727@esri.com_statesales>,\n",
+       " <User username:tom@esri.com_statesales>,\n",
+       " <User username:toms@esri.com_statesales>,\n",
+       " <User username:trac2205@esri.com_statesales>,\n",
+       " <User username:tschwartzman_statesales>,\n",
+       " <User username:ttracey_statesales>,\n",
+       " <User username:will8421@esri.com_statesales>,\n",
+       " <User username:zpelletier_statesales>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gis.users.search()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"9item_container\" style=\"height: auto; overflow: hidden; border: 1px solid #cfcfcf; border-radius: 2px; background: #f6fafa; line-height: 1.21429em; padding: 10px;\">\n",
+       "                    <div class=\"item_left\" style=\"width: 210px; float: left;\">\n",
+       "                       <a href='https://statesales.maps.arcgis.com/home/user.html?user=pgamberg_statesales' target='_blank'>\n",
+       "                        <img src='https://statesales.maps.arcgis.com/home/js/arcgisonline/css/images/no-user-thumb.jpg' class=\"itemThumbnail\">\n",
+       "                       </a>\n",
+       "                    </div>\n",
+       "\n",
+       "                    <div class=\"item_right\" style=\"float: none; width: auto; overflow: hidden;\">\n",
+       "                        <a href='https://statesales.maps.arcgis.com/home/user.html?user=pgamberg_statesales' target='_blank'><b>Pete Gamberg</b>\n",
+       "                        </a>\n",
+       "                        <br/><br/><b>Bio</b>: \n",
+       "                        <br/><b>First Name</b>: Pete\n",
+       "                        <br/><b>Last Name</b>: Gamberg\n",
+       "                        <br/><b>Username</b>: pgamberg_statesales\n",
+       "                        <br/><b>Joined</b>: September 29, 2017\n",
+       "\n",
+       "                    </div>\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<User username:pgamberg_statesales>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gis.users.me"
    ]
@@ -106,9 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<User username:pete9378@esri.com_statesales>,\n",
+       " <User username:pgamberg_statesales>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gis.users.search(\"pete\")"
    ]
@@ -122,9 +295,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<User username:matt3220@esri.com_statesales>,\n",
+       " <User username:matt7399@esri.com_statesales>,\n",
+       " <User username:Matt8683@esri.com_statesales>,\n",
+       " <User username:matt8819@esri.com_statesales>,\n",
+       " <User username:matt9602@esri.com_statesales>,\n",
+       " <User username:mbullock_statesales>,\n",
+       " <User username:mdenuelle_statesales>,\n",
+       " <User username:MRobinson_statesales>,\n",
+       " <User username:mviverito_statesales>]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gis.users.search(\"Matt\")"
    ]
@@ -154,17 +346,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"9item_container\" style=\"height: auto; overflow: hidden; border: 1px solid #cfcfcf; border-radius: 2px; background: #f6fafa; line-height: 1.21429em; padding: 10px;\">\n",
+       "                    <div class=\"item_left\" style=\"width: 210px; float: left;\">\n",
+       "                       <a href='https://statesales.maps.arcgis.com/home/user.html?user=SmithCollinss' target='_blank'>\n",
+       "                        <img src='https://statesales.maps.arcgis.com/home/js/arcgisonline/css/images/no-user-thumb.jpg' class=\"itemThumbnail\">\n",
+       "                       </a>\n",
+       "                    </div>\n",
+       "\n",
+       "                    <div class=\"item_right\" style=\"float: none; width: auto; overflow: hidden;\">\n",
+       "                        <a href='https://statesales.maps.arcgis.com/home/user.html?user=SmithCollinss' target='_blank'><b>smith colins</b>\n",
+       "                        </a>\n",
+       "                        <br/><br/><b>Bio</b>: None\n",
+       "                        <br/><b>First Name</b>: smith\n",
+       "                        <br/><b>Last Name</b>: colins\n",
+       "                        <br/><b>Username</b>: SmithCollinss\n",
+       "                        <br/><b>Joined</b>: July 25, 2019\n",
+       "\n",
+       "                    </div>\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<User username:SmithCollinss>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "clark = gis.users.create(username = \"SmithCollinss\", \n",
+    "new_user = gis.users.create(username = \"SmithCollinss\", \n",
     "                           password=\"COLL@123\", \n",
     "                          firstname=\"smith\", \n",
     "                          lastname=\"colins\", \n",
     "                          email=\"smith.collins@company.com\",  \n",
     "                          role='org_user')\n",
-    "clark"
+    "new_user"
    ]
   },
   {
@@ -176,11 +400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arcgis.gis.User"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(clark)"
+    "type(new_user)"
    ]
   },
   {
@@ -192,31 +427,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clark.description"
+    "new_user.description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'smith.collins@company.com'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "clark.email"
+    "new_user.email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "clark.delete()"
+    "new_user.delete()"
    ]
   },
   {
@@ -244,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -263,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,20 +529,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"9item_container\" style=\"height: auto; overflow: hidden; border: 1px solid #cfcfcf; border-radius: 2px; background: #f6fafa; line-height: 1.21429em; padding: 10px;\">\n",
+       "                    <div class=\"item_left\" style=\"width: 210px; float: left;\">\n",
+       "                       <a href='https://statesales.maps.arcgis.com/home/group.html?id=c20b6782c9b745918c6aaceaa52fa24a' target='_blank'>\n",
+       "                        <img src='https://statesales.maps.arcgis.com/home/images/group-no-image.png' class=\"itemThumbnail\">\n",
+       "                       </a>\n",
+       "                    </div>\n",
+       "\n",
+       "                    <div class=\"item_right\" style=\"float: none; width: auto; overflow: hidden;\">\n",
+       "                        <a href='https://statesales.maps.arcgis.com/home/group.html?id=c20b6782c9b745918c6aaceaa52fa24a' target='_blank'><b>Field Work</b>\n",
+       "                        </a>\n",
+       "                        <br/>\n",
+       "                        <br/><b>Summary</b>: None\n",
+       "                        <br/><b>Description</b>: None\n",
+       "                        <br/><b>Owner</b>: pgamberg_statesales\n",
+       "                        <br/><b>Created</b>: July 25, 2019\n",
+       "\n",
+       "                    </div>\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<Group title:\"Field Work\" owner:pgamberg_statesales>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "demo_group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arcgis.gis.Group"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(demo_group)"
    ]
@@ -299,9 +599,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'public'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "demo_group.access"
    ]
@@ -334,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,9 +829,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATING GROUPS\n",
+      " Creating group:  Basemaps  ##  success\n",
+      " Creating group:  Central Services  ##  success\n",
+      " Creating group:  Compliance  ##  success\n",
+      " Creating group:  Customer Service, Finance, Billing and Accounting  ##  success\n",
+      " Creating group:  Demographic Content  ##  success\n",
+      "Creating user:  SmithCollins ## success  ##\n",
+      "\t Adding to groups:  # Basemaps #  Central Services # \n",
+      "\n",
+      "Creating user:  JohnsonStewart ## success  ##\n",
+      "\t Adding to groups:  # Basemaps #  Central Services # \n",
+      "\n",
+      "Creating user:  WilliamsSanchez ## success  ##\n",
+      "\t Adding to groups:  # Basemaps #  Customer Service # \n",
+      "\n",
+      "Publishing  .//user_content//KS.csv # webmaps ## success. Assigning to:   #  SmithCollins\n",
+      "Publishing  .//user_content//NV.csv # webmaps ## success. Assigning to:   #  JohnsonStewart\n",
+      "Publishing  .//user_content//IN.csv # webmaps ## success. Assigning to:   #  WilliamsSanchez\n"
+     ]
+    }
+   ],
    "source": [
     "#set_theme()\n",
     "create_groups()\n",
@@ -552,12 +888,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean():\n",
-    "    # loop through and create users\n",
     "    with open(\"users.csv\", 'r') as users_csv:\n",
     "        users = csv.DictReader(users_csv)\n",
     "        for user in users:\n",
