--- a/ArcGIS Online Batch Create Users, Groups, and Content.ipynb
+++ b/ArcGIS Online Batch Create Users, Groups, and Content.ipynb
@@ -18,25 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We will go over a few workflows to show how the ArcGIS API can help administrators of Web GIS."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Let's import a few modules. We are importing getpass to provide the GIS object with a password in a safe manner."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from arcgis.gis import *\n",
     "from getpass import getpass\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "import csv \n",
+    "import json"
    ]
   },
   {
@@ -48,262 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
    "source": [
-    "password = getpass()\n",
-    "gis = GIS(\"https://esridenver.maps.arcgis.com\", \"pgamberg@EsriDenver\", password, verify_cert=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Querying for users"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's run a full query for listed users:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis.users.search()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis.users.me"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Filter your user search..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis.users.search(\"pete\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's search for my colleague, Matt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis.users.search(\"Matt\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a new user"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Users can be created through the API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis.users.create?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clark = gis.users.create(username = \"SmithCollinss\", \n",
-    "                           password=\"COLL@123\", \n",
-    "                          firstname=\"smith\", \n",
-    "                          lastname=\"colins\", \n",
-    "                          email=\"smith.collins@company.com\",  \n",
-    "                          role='org_user')\n",
-    "clark"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This variable is now a \"user\" object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(clark)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use intellisense to see all the options you have available with user objects."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clark.description"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clark.email"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "clark.delete()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Querying for groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gis.groups.search()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's create the group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# create groups\n",
-    "demo_group = gis.groups.create(\"Field Work\", \"Demo; CO\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is a \"group\" object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "demo_group?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "demo_group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(demo_group)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Like the user object, it has methods we can call on it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "demo_group.access"
+    "username = '' # enter your username here as a string\n",
+    "password = getpass.getpass('Enter password: ')\n",
+    "organizationURL = '' # enter your web GIS url here as a string. for example: 'https://esridenver.maps.arcgis.com'\n",
+    "\n",
+    "gis = GIS(organizationURL, username, password)\n",
+    "\n",
+    "print(\"Connected to: {}\\nConnected as: {}\".format(gis.properties.urlKey + \".\" + gis.properties.customBaseUrl,\n",
+    "                                                 gis.users.me.username))"
    ]
   },
   {
@@ -329,29 +88,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're going to import some libraries to help us"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv \n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Create Groups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,36 +235,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Customize the UX"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATING GROUPS\n",
+      " Creating group:  Basemaps  ##  success\n",
+      " Creating group:  Central Services  ##  success\n",
+      " Creating group:  Compliance  ##  success\n",
+      " Creating group:  Customer Service, Finance, Billing and Accounting  ##  success\n",
+      " Creating group:  Demographic Content  ##  success\n",
+      "Creating user:  SmithCollins ## success  ##\n",
+      "\t Adding to groups:  # Basemaps #  Central Services # \n",
+      "\n",
+      "Creating user:  JohnsonStewart ## success  ##\n",
+      "\t Adding to groups:  # Basemaps #  Central Services # \n",
+      "\n",
+      "Creating user:  WilliamsSanchez ## success  ##\n",
+      "\t Adding to groups:  # Basemaps #  Customer Service # \n",
+      "\n",
+      "Publishing  .//user_content//KS.csv # webmaps ## success. Assigning to:   #  SmithCollins\n",
+      "Publishing  .//user_content//NV.csv # webmaps ## success. Assigning to:   #  JohnsonStewart\n",
+      "Publishing  .//user_content//IN.csv # webmaps ## success. Assigning to:   #  WilliamsSanchez\n"
+     ]
+    }
+   ],
    "source": [
-    "def set_theme():\n",
-    "    \n",
-    "    folder = r'helper_files'\n",
-    "    print(folder)\n",
-    "    gis.admin.ux.set_logo(folder + r'\\logo\\dc_logo.png')\n",
-    "    gis.admin.ux.set_background(is_built_in=False)\n",
-    "    gis.admin.ux.set_banner(folder + r'\\baked_banner\\washingtondc_banner.png')\n",
-    "    gis.admin.ux.name = \"Washington DC\"\n",
-    "    gis.admin.ux.description = \"Washington DC\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set_theme()\n",
     "create_groups()\n",
     "create_users()\n",
     "publish_content()"
@@ -552,12 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean():\n",
-    "    # loop through and create users\n",
     "    with open(\"users.csv\", 'r') as users_csv:\n",
     "        users = csv.DictReader(users_csv)\n",
     "        for user in users:\n",
