--- a/ArcGIS Online user and content management ideas.ipynb
+++ b/ArcGIS Online user and content management ideas.ipynb
@@ -274,6 +274,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How much content is in my web GIS?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_content = gis.content.search(query=\"*\", max_items = 1000000000)\n",
+    "print(len(all_content), \" items within \", gis.url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How many credits do I have remaining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gis.properties.availableCredits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Who is consuming the most credits?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_mgr = arcgis.gis.UserManager(gis)\n",
+    "storage = user_mgr.search(role='org_publisher')\n",
+    "#storage = user_mgr.search('*')\n",
+    "\n",
+    "most_storage = []\n",
+    "for user in storage:\n",
+    "    megabyte = round(user.storageUsage/1000000)\n",
+    "    credit = round(megabyte/2.4)\n",
+    "    most_storage.append([user.fullName,megabyte,credit])\n",
+    "most_storage.sort(key=lambda tup: tup[1], reverse=True)\n",
+    "most_storage[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
