--- a/Updating Editor Tracking Data in a Hosted Feature Service (Online) example.ipynb
+++ b/Updating Editor Tracking Data in a Hosted Feature Service (Online) example.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Updating Editor Tracking Data in a Hosted Feature Service (Online)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This example is an adaptation from the blog post: https://community.esri.com/people/smoore-esristaff/blog/2019/03/21/updating-editor-tracking-data-in-a-hosted-feature-service-online"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This example was developed for a specific user use case and will need to be altered to work with your data. Please refer to the blog post for further instructions on this workflow."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
